// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. paragraph with a drop cap 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "height": 36,
      "paddingLeft": 10,
      "paddingRight": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 0,
        "flexDirection": "row",
        "height": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        Object {
          "height": 108,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 100,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 96,
            "marginBottom": -30,
            "marginRight": 5,
            "marginTop": -12,
          }
        }
      >
        T
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 17,
          "fontStyle": "normal",
          "height": undefined,
          "left": 100,
          "lineHeight": 26,
          "marginBottom": 20,
          "position": "absolute",
          "top": 0,
          "width": 400,
        }
      }
    >
      his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.  
    </Text>
  </View>
</View>
`;

exports[`2. responsive tablet paragraph 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": 660,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#333333",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 17,
        "fontStyle": "normal",
        "lineHeight": 26,
        "marginBottom": 20,
      }
    }
  >
    This being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
  </Text>
</View>
`;

exports[`3. responsive tablet paragraph with a drop cap 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "height": 36,
      "paddingLeft": 10,
      "paddingRight": 10,
      "width": 660,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flex": 0,
        "flexDirection": "row",
        "height": 1,
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        Object {
          "height": 108,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 100,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "TimesModern-Regular",
            "fontSize": 96,
            "marginBottom": -30,
            "marginRight": 5,
            "marginTop": -12,
          }
        }
      >
        T
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 17,
          "fontStyle": "normal",
          "height": undefined,
          "left": 100,
          "lineHeight": 26,
          "marginBottom": 20,
          "position": "absolute",
          "top": 0,
          "width": 540,
        }
      }
    >
      his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.  
    </Text>
  </View>
</View>
`;
